--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    //noinspection GradleCompatible
-    compileSdkVersion 24
-    buildToolsVersion "28.0.2"
+    namespace "de.wikilab.android.ldapsync"
 
     defaultConfig {
         applicationId "de.wikilab.android.ldapsync"
-        minSdkVersion 11
-        targetSdkVersion 28
+        minSdk 24
+        targetSdkVersion 34
         compileOptions {
             sourceCompatibility JavaVersion.VERSION_1_6
             targetCompatibility JavaVersion.VERSION_1_6
@@ -27,16 +25,19 @@ android {
             includeAndroidResources = true
         }
     }
-    lintOptions {
+    compileSdk 34
+    lint {
         abortOnError false
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 }
 
 dependencies {
-    // https://mvnrepository.com/artifact/com.unboundid/unboundid-ldapsdk
     implementation group: 'com.unboundid', name: 'unboundid-ldapsdk', version: '3.2.1'
-    implementation 'junit:junit:4.12'
-    implementation 'com.android.support:support-v4:24.2.1'
-    //implementation 'com.android.support:support-vector-drawable:22.0.0'
+    implementation 'junit:junit:4.13.2'
+    implementation 'com.android.support:support-v4:28.0.0'
     testImplementation "org.robolectric:robolectric:3.8"
 }
